# my_cmake_demo

./: .gitmodules  README.md
compile_and_use_shared_library/: CMakeLists.txt  README.md  demo.h  main.cpp
compile_and_use_shared_library/shared/: CMakeLists.txt  dll.c
compile_and_use_shared_library/shared/include/: dll.h
out_of_source_llvm_pass/: CMakeLists.txt  README.md  a.out
out_of_source_llvm_pass/HelloWorld/: CMakeLists.txt  Pass.cpp
use_cython/: .gitignore  CMakeLists.txt  README.md  main.c  main.pyx  py_config.py
